--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           container.addChild(heart);
         }
     
-      var text = new createjs.Text("Dear Husband,\nDon’t worry about getting older. You’re still younger than the dinosaurs.\n Welcome to your 30. \n 05th January, 2025", "bold italic 28px Lucida Handwriting", "rgb(31,1,25)");
+      var text = new createjs.Text("Don’t worry about getting older. You’re still younger than the dinosaurs.\n Welcome to your 30. \n 05th January, 2025", "bold italic 26px Lucida Handwriting", "rgb(31,1,25)");
       text.textAlign = "center";
       text.x = w / 2;
       text.y = h / 2 - text.getMeasuredLineHeight();
